# verrueckterschwarm2

crazyflie/config/: config.rviz  crazyflies.yaml  motion_capture.yaml  server.yaml
crazyflie/launch/: launch.py
crazyflie/scripts/: chooser.py
crazyflie_examples/crazyflie_examples/: figure8.py  hello_world.py  nice_hover.py
crazyflie_flight_path/: CMakeLists.txt  package.xml  setup.cfg  setup.py
crazyflie_flight_path/crazyflie_flight_path/: cmdPosition.py  csv_spiral.py  goTo.py  goTo_colAv_example.py  goTo_waypoint_example.py  waypoint_mission_cmdPosition.py  waypoint_mission_goTo.py  waypoint_mission_goTo_colAv.py
crazyflie_flight_path/crazyflie_flight_path/archive/: goTo_working_class_issue_with_heading.py  goTo_working_messy_execution.py
crazyflie_flight_path/data/: spiral_cf01.csv  spiral_cf02.csv
crazyflie_waypoint_mission/: CMakeLists.txt  package.xml  setup.cfg
crazyflie_waypoint_mission/crazyflie_waypoint_mission/: goTo_waypoint_mission.py
crazyflie_waypoint_mission/crazyflie_waypoint_mission/metaphorical_trashcan/: README.md  goTo_cmdPosTurn.py  goTo_heading_check.py
ros_ws/src/crazyswarm/launch/: mocap_helper.launch
