[develop]
script_dir=$base/lib/crazyflie_flight_path
[install]
install_scripts=$base/lib/crazyflie_flight_path
[options.entry_points]
console_scripts =
    waypoint_mission_csv = crazyflie_flight_path.waypoint_mission_csv:main
    waypoint_mission_goTo = crazyflie_flight_path.waypoint_mission_goTo:main
    waypoint_mission_cmdPosition = crazyflie_flight_path.waypoint_mission_cmdPosition:main
