[develop]
script_dir=$base/lib/crazyflie_flight_path
[install]
install_scripts=$base/lib/crazyflie_flight_path
[options.entry_points]
console_scripts =
    csv = crazyflie_flight_path.csv:main
    goTo_colAv_example = crazyflie_flight_path.goTo_colAv_example:main
    cmdPosition = crazyflie_flight_path.cmdPosition:main
    goTo = crazyflie_flight_path.goTo:main
