[develop]
script_dir=$base/lib/crazyflie_flight_path
[install]
install_scripts=$base/lib/crazyflie_flight_path
[options.entry_points]
console_scripts =
    cmdPosition = crazyflie_flight_path.cmdPosition:main

    csv_spiral = crazyflie_flight_path.csv_spiral:main
    
    goTo_colAv_example = crazyflie_flight_path.goTo_colAv_example:main
    goTo_waypoint_example = crazyflie_flight_path.goTo_waypoint_example:main
    goTo = crazyflie_flight_path.goTo:main