[develop]
script_dir=$base/lib/crazyflie_waypoint_mission
[install]
install_scripts=$base/lib/crazyflie_waypoint_mission
[options.entry_points]
console_scripts =
    cmdPosition = crazyflie_waypoint_mission.cmdPosition:main

    csv_spiral = crazyflie_waypoint_mission.csv_spiral:main
    
    goTo_colAv_example = crazyflie_waypoint_mission.goTo_colAv_example:main
    goTo_waypoint_mission = crazyflie_waypoint_mission.goTo_waypoint_mission:main